WIP of Calculating least diverse for tutorial group
School and Gender case done

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "65866e7d-e55b-4886-832e-1500568af55b",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "9f6afe4f-e289-4867-9fcc-03e5773eece8",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "35a2ba2e-f8a2-4729-9604-6b3a414d4c03",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "2da36bad-c475-4c8d-8762-903eb992df7f",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "258d4f1c-3dea-48f1-99c0-d4f0a3131e6b",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 97,
    "id": "239672c9-933d-4b99-8d3e-6538fc3d007f",
    "metadata": {},
    "outputs": [
@@ -188,8 +188,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Tutorial Group', 'Student ID', 'School', 'Name', 'Gender', 'CGPA']\n",
-      "['G-1', '5002', 'CCDS', 'Aarav Singh', 'Male', '4.02', '', 'AAAAAAAH']\n"
+      "['Tutorial Group', 'Student ID', 'School', 'Name', 'Gender', 'CGPA', '', 'AAAAAAAH', '', 'AAAAAAAH']\n",
+      "['Tutorial Group', 'Student ID', 'School', 'Name', 'Gender', 'CGPA', '', 'AAAAAAAH', '', 'AAAAAAAH']\n"
      ]
     }
    ],
@@ -203,7 +203,7 @@
     "print(fileData[1])\n",
     "for i in range(len(fileData)):  #for each list, join items by ','. Then prints each line into new excel sheet\n",
     "    fileData[i] = ','.join(fileData[i])\n",
-    "    print(fileData[i], file = testfile, end = '\\n')\n"
+    "    print(fileData[i], file = testfile, end = '\\n')"
    ]
   },
   {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "264edb32-8df7-4c34-81dc-0825f5f1460a",
    "metadata": {},
    "outputs": [],
@@ -260,19 +260,18 @@
     "    size = len(groupData)\n",
     "    occurences = {} # Dictionary to keep track of occurences of each factor\n",
     "    for i in groupData:\n",
-    "        for studentData in i.values():\n",
-    "            schoolOfStudent = studentData[factor]\n",
-    "            # If factor already exists in occurences, add 1 to it, otherwise create it and set to 1\n",
-    "            if schoolOfStudent in occurences.keys():\n",
-    "                occurences[schoolOfStudent] += 1\n",
-    "            else:\n",
-    "                occurences[schoolOfStudent] = 1\n",
+    "        factorOfStudent = i[factor]\n",
+    "        # If factor already exists in occurences, add 1 to it, otherwise create it and set to 1\n",
+    "        if factorOfStudent in occurences.keys():\n",
+    "            occurences[factorOfStudent] += 1\n",
+    "        else:\n",
+    "            occurences[factorOfStudent] = 1\n",
     "    return occurences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "33b1a0a5-dddb-41e1-9686-e60eca5ade96",
    "metadata": {},
    "outputs": [
@@ -288,19 +287,12 @@
    ],
    "source": [
     "testGroupData = [\n",
-    "    {71 : {\"TG\" : \"G-1\", \"School\" : \"SoH\", \"Name\" : \"Savannah Taylor\", \"Gender\" : False, \"CGPA\" : 4.19}},\n",
-    "    {75 : {\"TG\" : \"G-1\", \"School\" : \"CCDS\", \"Name\" : \"Sakina Ahmed\", \"Gender\" : False, \"CGPA\" : 4.03}},\n",
-    "    {162 : {\"TG\" : \"G-1\", \"School\" : \"SSS\", \"Name\" : \"Lila Patel\", \"Gender\" : False, \"CGPA\" : 4.07}},\n",
-    "    {235 : {\"TG\" : \"G-1\", \"School\" : \"CCDS\", \"Name\" : \"Ming Zhang\", \"Gender\" : True, \"CGPA\" : 4.06}},\n",
-    "    {288 : {\"TG\" : \"G-1\", \"School\" : \"CoB (NBS)\", \"Name\" : \"Ajay Verma\", \"Gender\" : True, \"CGPA\" : 4.01}}\n",
+    "    {\"Student ID\": 71, \"TG\" : \"G-1\", \"School\" : \"SoH\", \"Name\" : \"Savannah Taylor\", \"Gender\" : False, \"CGPA\" : 4.19},\n",
+    "    {\"Student ID\": 75, \"TG\" : \"G-1\", \"School\" : \"CCDS\", \"Name\" : \"Sakina Ahmed\", \"Gender\" : False, \"CGPA\" : 4.03},\n",
+    "    {\"Student ID\": 162, \"TG\" : \"G-1\", \"School\" : \"SSS\", \"Name\" : \"Lila Patel\", \"Gender\" : False, \"CGPA\" : 4.07},\n",
+    "    {\"Student ID\": 235, \"TG\" : \"G-1\", \"School\" : \"CCDS\", \"Name\" : \"Ming Zhang\", \"Gender\" : True, \"CGPA\" : 4.06},\n",
+    "    {\"Student ID\": 288, \"TG\" : \"G-1\", \"School\" : \"CoB (NBS)\", \"Name\" : \"Ajay Verma\", \"Gender\" : True, \"CGPA\" : 4.01}\n",
     "]\n",
-    "# testGroupData = [\n",
-    "#     {\"Student ID\": 71, \"TG\" : \"G-1\", \"School\" : \"SoH\", \"Name\" : \"Savannah Taylor\", \"Gender\" : False, \"CGPA\" : 4.19},\n",
-    "#     {\"Student ID\": 75, \"TG\" : \"G-1\", \"School\" : \"CCDS\", \"Name\" : \"Sakina Ahmed\", \"Gender\" : False, \"CGPA\" : 4.03},\n",
-    "#     {\"Student ID\": 162, \"TG\" : \"G-1\", \"School\" : \"SSS\", \"Name\" : \"Lila Patel\", \"Gender\" : False, \"CGPA\" : 4.07},\n",
-    "#     {\"Student ID\": 235, \"TG\" : \"G-1\", \"School\" : \"CCDS\", \"Name\" : \"Ming Zhang\", \"Gender\" : True, \"CGPA\" : 4.06},\n",
-    "#     {\"Student ID\": 288, \"TG\" : \"G-1\", \"School\" : \"CoB (NBS)\", \"Name\" : \"Ajay Verma\", \"Gender\" : True, \"CGPA\" : 4.01}\n",
-    "# ]\n",
     "print(FindOccurencesInGroup(\"School\", testGroupData))\n",
     "print(FindOccurencesInGroup(\"Gender\", testGroupData))\n",
     "print(FindOccurencesInGroup(\"CGPA\", testGroupData))"
@@ -316,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d0ac0a1d-643a-4317-bf73-0897691b7c0d",
    "metadata": {},
    "outputs": [],
@@ -341,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "966c82e5-7d2c-4176-9650-e7935949222c",
    "metadata": {},
    "outputs": [
@@ -364,7 +356,9 @@
   {
    "cell_type": "markdown",
    "id": "535dea59-6582-4a07-8968-2636101a2978",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## CGPA case\n",
     "But this does not work for CGPA, for that we want to find the mean, range, and midrange instead\n",
@@ -376,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "119b3209-161a-497e-9ecb-df7deee7219a",
    "metadata": {},
    "outputs": [],
@@ -399,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "cd31556f-4d90-45f6-93bb-25f139204b50",
    "metadata": {},
    "outputs": [
@@ -430,19 +424,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "18c50b8d-5b40-41d1-8bdd-af37602bd8a6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters:\n",
     "#  factors: list of strings of factor to check, same as the key in the dictionary\n",
-    "#  groupDatas: List of datas needed as a list of dictionaries\n",
+    "#  groupsDatas: List of datas needed as a list of dictionaries\n",
     "# Return:\n",
-    "#  leastDiverse: dictionary of {factor1: numOccurences, factor2: numOccurences ... } as string:int\n",
-    "def FindLeastDiverseInTutorialGroup(factors, groupDatas) -> dict:\n",
+    "#  leastDiverse: dictionary of {factor1: occurencesPercent, factor2: occurencesPercent ... } as string:int\n",
+    "def FindLeastDiverseInTutorialGroup(factors, *groupsDatas) -> dict:\n",
+    "    if len(groupsDatas) == 1 and type(groupsDatas[0]) is list:\n",
+    "        groupsDatas = groupsDatas[0]\n",
+    "\n",
     "    leastDiverse = {}\n",
-    "    "
+    "    for factor in factors:\n",
+    "        leastDiverseOccurence : float = (\"factorResult\", 0) # % of highest occurence, i.e. 90% of students are from ccds\n",
+    "        for i in groupsDatas:\n",
+    "            occurence = FindMaxInDict(FindOccurencesInGroup(factor, i))\n",
+    "            currentPercent = occurence[1] / len(i)\n",
+    "            if currentPercent > leastDiverseOccurence[1]:\n",
+    "                leastDiverseOccurence = (occurence[0], currentPercent)\n",
+    "            elif currentPercent == leastDiverseOccurence[1]:\n",
+    "                leastDiverseOccurence = (list(leastDiverseOccurence[0] + occurence[0]), currentPercent)\n",
+    "        leastDiverse[factor] = leastDiverseOccurence\n",
+    "    return leastDiverse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "1a47262d-4bd9-4476-9abb-7ef3339c3bcc",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test group: 0\n",
+      "Student ID: 5002              TG: G-1               School: CCDS              Name: Aarav Singh       Gender: True              CGPA: 4.02              \n",
+      "Student ID: 3838              TG: G-1               School: EEE               Name: Aarti Nair        Gender: False             CGPA: 4.05              \n",
+      "Student ID: 2091              TG: G-1               School: EEE               Name: Adlan Bin Rahman  Gender: True              CGPA: 4.2               \n",
+      "Student ID: 288               TG: G-1               School: CoB (NBS)         Name: Ajay Verma        Gender: True              CGPA: 4.01              \n",
+      "Student ID: 4479              TG: G-1               School: CCDS              Name: Amelia Kim        Gender: False             CGPA: 4.11              \n",
+      "Student ID: 5708              TG: G-1               School: SoH               Name: Ananya Ramesh     Gender: True              CGPA: 4.2               \n",
+      "Student ID: 4563              TG: G-1               School: WKW SCI           Name: Anjali Patel      Gender: False             CGPA: 4.01              \n",
+      "Student ID: 3989              TG: G-1               School: WKW SCI           Name: Anthony Liu       Gender: True              CGPA: 4.15              \n",
+      "Student ID: 2115              TG: G-1               School: EEE               Name: Anya Kumar        Gender: False             CGPA: 4.03              \n",
+      "Student ID: 1383              TG: G-1               School: CoB (NBS)         Name: Areeba Khan       Gender: False             CGPA: 4.19              \n",
+      "\n",
+      "test group: 1\n",
+      "Student ID: 1417              TG: G-1               School: CoE               Name: Darren Lee        Gender: True              CGPA: 4.12              \n",
+      "Student ID: 1075              TG: G-1               School: CoB (NBS)         Name: Felix Yip         Gender: True              CGPA: 4.08              \n",
+      "Student ID: 3148              TG: G-1               School: EEE               Name: Gabriel Young     Gender: True              CGPA: 3.88              \n",
+      "Student ID: 4402              TG: G-1               School: CCDS              Name: Grace Turner      Gender: False             CGPA: 4.08              \n",
+      "Student ID: 945               TG: G-1               School: MAE               Name: Han Li            Gender: False             CGPA: 4.1               \n",
+      "Student ID: 2230              TG: G-1               School: CoB (NBS)         Name: Harlow Wang       Gender: False             CGPA: 4.18              \n",
+      "Student ID: 4520              TG: G-1               School: EEE               Name: Henry Foster      Gender: True              CGPA: 4.11              \n",
+      "Student ID: 567               TG: G-1               School: CoB (NBS)         Name: Isabella Thompson Gender: False             CGPA: 4.03              \n",
+      "Student ID: 1841              TG: G-1               School: MAE               Name: Jett Morales      Gender: True              CGPA: 4.12              \n",
+      "Student ID: 4576              TG: G-1               School: EEE               Name: Jie Zhang         Gender: True              CGPA: 4.03              \n",
+      "\n",
+      "test group: 2\n",
+      "Student ID: 5703              TG: G-1               School: SPMS              Name: Karen Lee         Gender: False             CGPA: 4.12              \n",
+      "Student ID: 2353              TG: G-1               School: SBS               Name: Karen Wong        Gender: False             CGPA: 3.95              \n",
+      "Student ID: 2069              TG: G-1               School: SSS               Name: Kathy Lau         Gender: False             CGPA: 4.48              \n",
+      "Student ID: 3861              TG: G-1               School: ASE               Name: Layla Torres      Gender: False             CGPA: 4.52              \n",
+      "Student ID: 162               TG: G-1               School: SSS               Name: Lila Patel        Gender: False             CGPA: 4.07              \n",
+      "Student ID: 588               TG: G-1               School: MAE               Name: Lucas Walker      Gender: True              CGPA: 4.06              \n",
+      "Student ID: 659               TG: G-1               School: SSS               Name: Maria Ivanovna    Gender: False             CGPA: 4.2               \n",
+      "Student ID: 4820              TG: G-1               School: CoE               Name: Meera Singh       Gender: False             CGPA: 4.22              \n",
+      "Student ID: 2151              TG: G-1               School: EEE               Name: Mei Hong          Gender: False             CGPA: 4.02              \n",
+      "Student ID: 235               TG: G-1               School: CCDS              Name: Ming Zhang        Gender: True              CGPA: 4.06              \n",
+      "\n",
+      "test group: 3\n",
+      "Student ID: 527               TG: G-1               School: EEE               Name: Mohit Desai       Gender: True              CGPA: 4.06              \n",
+      "Student ID: 1329              TG: G-1               School: NIE               Name: Nguyen Van Sam    Gender: True              CGPA: 3.85              \n",
+      "Student ID: 5119              TG: G-1               School: ADM               Name: Nhung Vu          Gender: False             CGPA: 4.04              \n",
+      "Student ID: 809               TG: G-1               School: CoB (NBS)         Name: Nisha Das         Gender: False             CGPA: 4.26              \n",
+      "Student ID: 2650              TG: G-1               School: SoH               Name: Nurul Shafika     Gender: False             CGPA: 4.09              \n",
+      "Student ID: 4657              TG: G-1               School: SoH               Name: Oleg Petrovich    Gender: True              CGPA: 4.0               \n",
+      "Student ID: 2818              TG: G-1               School: CoB (NBS)         Name: Oliver Tan        Gender: True              CGPA: 4.09              \n",
+      "Student ID: 3628              TG: G-1               School: EEE               Name: Omer Ahmed        Gender: True              CGPA: 4.06              \n",
+      "Student ID: 1555              TG: G-1               School: MAE               Name: Prerna Gupta      Gender: False             CGPA: 4.04              \n",
+      "Student ID: 1271              TG: G-1               School: SSS               Name: Priya Singh       Gender: False             CGPA: 4.17              \n",
+      "\n",
+      "test group: 4\n",
+      "Student ID: 75                TG: G-1               School: CCDS              Name: Sakina Ahmed      Gender: False             CGPA: 4.03              \n",
+      "Student ID: 4338              TG: G-1               School: SPMS              Name: Sana Jain         Gender: False             CGPA: 4.22              \n",
+      "Student ID: 71                TG: G-1               School: SoH               Name: Savannah Taylor   Gender: False             CGPA: 4.19              \n",
+      "Student ID: 2776              TG: G-1               School: CCEB              Name: Siddharth Nair    Gender: True              CGPA: 4.14              \n",
+      "Student ID: 2417              TG: G-1               School: SSS               Name: Truong Minh Chau  Gender: False             CGPA: 3.88              \n",
+      "Student ID: 5477              TG: G-1               School: SoH               Name: Vikram Desai      Gender: True              CGPA: 4.09              \n",
+      "Student ID: 2326              TG: G-1               School: CoB (NBS)         Name: Vivi Dwi          Gender: False             CGPA: 3.95              \n",
+      "Student ID: 3930              TG: G-1               School: EEE               Name: Xun Wei           Gender: False             CGPA: 4.18              \n",
+      "Student ID: 1645              TG: G-1               School: CoE               Name: Zachary Wu        Gender: True              CGPA: 3.93              \n",
+      "Student ID: 592               TG: G-1               School: MSE               Name: Zara Chang        Gender: False             CGPA: 4.11              \n",
+      "\n",
+      "{'School': (['EEE', 'CoB (NBS)', 'EEE', 'SSS'], 0.3), 'Gender': ([False], 0.8), 'CGPA': ([4.2, 4.01, 4.12, 4.08, 4.03, 4.06, 4.06, 4.04, 4.09], 0.2)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "testGroupData = [studentData[0:10], studentData[10:20], studentData[20:30], studentData[30:40], studentData[40:50]]\n",
+    "for i in range(5):\n",
+    "    print(f\"test group: {i}\")\n",
+    "    PrintDictListNice(testGroupData[i])\n",
+    "    print()\n",
+    "# print(testGroupData)\n",
+    "print(FindLeastDiverseInTutorialGroup([\"School\", \"Gender\", \"CGPA\"], testGroupData))"
    ]
   },
   {
@@ -500,16 +593,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "ab46be42-393c-489d-b43e-2e377837f457",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def PrintDictListNice(dictionaryList, spacing : int = 18):\n",
+    "    for i in dictionaryList:\n",
+    "        for k,v in i.items():\n",
+    "            contentLength = 10\n",
+    "            if type(v) is int:\n",
+    "                contentLength = log10(v) + 1\n",
+    "            else:\n",
+    "                contentLength = len(str(v))\n",
+    "            # elif type(v) is bool:\n",
+    "            #     contentLength = len(str(v))\n",
+    "            print(f\"{k}: {v}{' ' * max(spacing - contentLength, 1)}\", end = '')\n",
+    "        print()\n",
+    "def log10(num):\n",
+    "    count = 0\n",
+    "    while num >= 10:\n",
+    "        num /= 10\n",
+    "        count += 1\n",
+    "    return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "635fb41c-2dd2-4924-a50e-7c94dfed7fa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(log10(1))\n",
+    "print(log10(20))\n",
+    "print(log10(34))\n",
+    "print(log10(64280))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "635fb41c-2dd2-4924-a50e-7c94dfed7fa4",
+   "id": "6590729b-d91c-4d6a-831b-79a5b9a290e5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -531,7 +667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.13.6"
   }
  },
  "nbformat": 4,
