added final sorting algo description

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "9f6afe4f-e289-4867-9fcc-03e5773eece8",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "35a2ba2e-f8a2-4729-9604-6b3a414d4c03",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "2da36bad-c475-4c8d-8762-903eb992df7f",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "258d4f1c-3dea-48f1-99c0-d4f0a3131e6b",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "26fa143e-c8e4-4def-a0fb-00e314cb6f88",
    "metadata": {
     "scrolled": true
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "7f28a0eb-813b-4756-89e3-2b673e74be99",
    "metadata": {
     "scrolled": true
@@ -6282,7 +6282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "8bd0e3a9-7772-4e1c-93a6-3b979ba070b8",
    "metadata": {
     "scrolled": true
@@ -13195,7 +13195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "d85023c8-c39d-4c65-898c-77a99dcba66c",
    "metadata": {
     "scrolled": true
@@ -15226,7 +15226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "67b32495-581f-4fa9-8a69-7305704c0eae",
    "metadata": {
     "scrolled": true
@@ -22485,9 +22485,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "94de07cf-59ff-4be2-825a-6f60a2077d4d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -29051,7 +29053,7 @@
     "\n",
     "    # Finding minimum\n",
     "    totalMale = sum(1 for s in studentData if s['Gender'])\n",
-    "    mMin = totalMale // numGrp # Minimum possible number of males per group\n",
+    "    mMin = totalMale // numGrp # Number of females that can be distributed equally per group\n",
     "    mRemainder = totalMale % numGrp # Remainder of males after distributing equally\n",
     "\n",
     "    # Remainder males get populated into the first mRemainder groups\n",
@@ -29061,7 +29063,7 @@
     "    mCurr = [0] * numGrp\n",
     "\n",
     "    totalFemale = len(studentData) - totalMale\n",
-    "    fMin = totalFemale // numGrp # Minimum possible number of females per group\n",
+    "    fMin = totalFemale // numGrp # Number of females that can be distributed equally per group\n",
     "    fRemainder = totalFemale % numGrp # Remainder of females after distributing equally\n",
     "\n",
     "    # Remainder females get populated into groups starting from the mRemainder'th index\n",
@@ -29103,8 +29105,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8aa31a83-17b3-4385-8b7c-b33ad5ee557a",
+   "metadata": {},
+   "source": [
+    "To combine these individual algorithms, we consider the priorities we set earlier: 1) School, 2) CGPA, 3) Gender. \n",
+    "\n",
+    "Since school is first, we order the list of students in the order of school, as shown in 4.3.1. \n",
+    "\n",
+    "Then, within each school, we order students in terms of CGPA, as shown in 4.3.2. This creates a bucket-like structure as desired, where each group of school acts like an individual bucket. Then, we do a round-robin distribution as intended. Notice that sorting these factors work without any conditional statements, but relies soley on the order of distribution. \n",
+    "\n",
+    "This is key, because the diversification of gender relies on conditionals. This way, we can avoid different conditionals clashing and making distribution even more tedious. \n",
+    "\n",
+    "To diversify gender, we use the same logic as in 4.3.3, appending students to groups depending on the ideal predetermined number of each gender per group. \n",
+    "\n",
+    "In the case that there is an overload of students, we do a second pass sequentially to respect the order of the student list (respect the school & CGPA algorithm) while distributing the remaining students.\n",
+    "\n",
+    "The code below shows the final sorting algorithm at work:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "e2e3931a-6857-4d93-b25f-6d86300b7f9e",
    "metadata": {},
    "outputs": [],
@@ -29147,7 +29169,7 @@
     "        fIdeal[i % numGrp] += 1\n",
     "    fCurr = [0] * numGrp\n",
     "\n",
-    "    # Distribution \n",
+    "    # Final Distribution \n",
     "    grpIndex = 0\n",
     "    for student in sortedStudents:\n",
     "        for offset in range(numGrp):\n",
@@ -29162,7 +29184,6 @@
     "                    fCurr[g] += 1\n",
     "                    break\n",
     "            else:\n",
-    "                # if all gender quotas full, put in group with least size\n",
     "                g = min(range(numGrp), key=lambda x: len(grps[x]))\n",
     "                if student['Gender']:\n",
     "                    grps[g].append(student)\n",
@@ -29180,7 +29201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "39ef2bf3-0c76-443a-8194-b779815ae4e2",
    "metadata": {
     "scrolled": true
@@ -38556,7 +38577,7 @@
    "source": [
     "n = 7\n",
     "\n",
-    "# Apply to each TG \n",
+    "# Apply algorithm separately to each TG \n",
     "all_tgs = sorted(set(s['TG'] for s in studentData))\n",
     "for tg in all_tgs:\n",
     "    tgStuds = [s for s in studentData if s['TG'] == tg]\n",
