--- a/Main.ipynb
+++ b/Main.ipynb
@@ -787,6 +787,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b75e5719-53c1-4b1b-a5d0-6cd00d8ba86c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finalGrps"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d72a4d7a-2a77-48dc-b97e-f13cdc6fb2bf",
    "metadata": {},
@@ -829,6 +839,58 @@
    "metadata": {},
    "source": [
     "# Algorithm Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35a3564c-4e55-4629-a195-4d249078527b",
+   "metadata": {},
+   "source": [
+    "## Util for better visualisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab46be42-393c-489d-b43e-2e377837f457",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def PrintDictListNice(dictionaryList, spacing : int = 18):\n",
+    "    for i in dictionaryList:\n",
+    "        for k,v in i.items():\n",
+    "            contentLength = 10\n",
+    "            if type(v) is float:\n",
+    "                v = f\"{v:.3f}-\"\n",
+    "            if type(v) is int:\n",
+    "                contentLength = log10(v) + 1\n",
+    "            else:\n",
+    "                contentLength = len(str(v))\n",
+    "            # elif type(v) is bool:\n",
+    "            #     contentLength = len(str(v))\n",
+    "            print(f\"{k}: {v}{' ' * max(spacing - contentLength, 1)}\", end = '')\n",
+    "        print()\n",
+    "def log10(num):\n",
+    "    count = 0\n",
+    "    while num >= 10:\n",
+    "        num /= 10\n",
+    "        count += 1\n",
+    "    return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "635fb41c-2dd2-4924-a50e-7c94dfed7fa4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(log10(1))\n",
+    "print(log10(20))\n",
+    "print(log10(34))\n",
+    "print(log10(64280))\n",
+    "d = {\"test\" : 4.236752387546, \"a\" : \"g\"}\n",
+    "PrintDictListNice([d])"
    ]
   },
   {
@@ -1219,14 +1281,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1e42e1b5-64a7-4f30-9695-11b8c7751e0a",
+   "metadata": {},
+   "source": [
+    "## Calculating for every tutorial group"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c70dc59b-07a3-4314-870f-8bae9b64a2af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Weights\n",
-    "CRITERA_WEIGHTS = {\"CGPA\": 100, \"SCHOOL\": 100, \"GENDER\": 100}"
+    "allGroupData = "
    ]
   },
   {
@@ -1282,7 +1351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab46be42-393c-489d-b43e-2e377837f457",
+   "id": "a026e3ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1311,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "635fb41c-2dd2-4924-a50e-7c94dfed7fa4",
+   "id": "1924b832",
    "metadata": {},
    "outputs": [],
    "source": [
