Finish calculation for least diverse
Takes into account the stats from tutorial group the group is from

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -304,7 +304,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cbfb7a04",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "All_raw_list = getdataintolist(studentData)\n",
@@ -1160,7 +1162,7 @@
     "def Median(*nums) -> float:\n",
     "    if len(nums) == 1 and type(nums[0]) is list:\n",
     "        nums = nums[0]\n",
-    "    # TODO: replace with another self-made sort cherry pls\n",
+    "    # TODO: replace with another self-made sort\n",
     "    nums.sort()\n",
     "    total = len(nums)\n",
     "    mid = total // 2\n",
@@ -1277,7 +1279,6 @@
    },
    "outputs": [],
    "source": [
-    "#TODO : revise the calculation of balance factor by taking into account buckets rather than median\n",
     "testGroupData = finalAllTgs[0]\n",
     "medianCGPA = Median(TutGrpExtractCGPA(testGroupData))\n",
     "rangeCGPA = Range(TutGrpExtractCGPA(testGroupData))\n",
@@ -1432,7 +1433,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "33651413-9c58-4677-9bca-d159b0f4c160",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# How the variable for data of all students sorted into grps looks like\n",
@@ -1483,8 +1486,122 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90259b0b-8473-4ba3-8150-71589d6d5800",
+   "id": "2db50eae-d638-416f-aa12-3553103b2ac5",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(allTG_LD[0])\n",
+    "print(allTG_LD_Idx[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f05a1390-24f4-477c-b40b-befbedb5bc5a",
+   "metadata": {},
+   "source": [
+    "## Finding Theoretical best school distribution when disregarding everything \n",
+    "Will be useful later on for judging diversity of groups compared to innate diversity of the tutorial group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d0625e7-1901-48d4-978b-d110223d1ff4",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def ceil(num : float):\n",
+    "    return num // 1 + (1 if num % 1 > 0 else 0)\n",
+    "\n",
+    "# tg_studentData : List of student data in a TG\n",
+    "# returns: lowestDiversity : the group with the lowest diversity in the theoretical best grouping for only school\n",
+    "def TheoreticalBestForSchool_LD(tg_studentData) -> list:\n",
+    "    # Easiest way by reusing old functions, but inefficient\n",
+    "    # data = FindLeastDiverseInTutorialGroup([\"School\"], sortSchool(tg_studentData, n))\n",
+    "\n",
+    "    # Instead, find most common school and divide by num of groups\n",
+    "    # Find highest school count in TG\n",
+    "    highestSchCnt = orderSchool(tg_studentData)[0][0][1]\n",
+    "\n",
+    "    # For analysis later\n",
+    "    secondHighestSchCnt = orderSchool(tg_studentData)[0][1][1]\n",
+    "    print(\"h\", highestSchCnt, secondHighestSchCnt)\n",
+    "    # print(orderSchool(tg_studentData)[0][0][1])\n",
+    "\n",
+    "    # Calculate number of groups in TG\n",
+    "    total = len(tg_studentData) \n",
+    "    r = total % n\n",
+    "    numGrp = total // n if (r <= total/(2 * n)) else total // n + 1\n",
+    "\n",
+    "    # The most number of repeated sch in a grp will be from the most common sch being evenly distributed as much as possible\n",
+    "    # Leading to ceil(highest sch count / grps) \n",
+    "    maxRepeat = ceil(highestSchCnt / numGrp)\n",
+    "\n",
+    "    # The percentage would then be maxRepeat / n\n",
+    "    remainder = highestSchCnt % numGrp\n",
+    "    data = maxRepeat / n \n",
+    "    # But we need to account for groups with extra members\n",
+    "    print(maxRepeat, n, remainder, r)\n",
+    "    if r > 0 and r <= total/(2 * n): # Don't care for case 2 of group nums\n",
+    "        data2 = maxRepeat / (n + 1)\n",
+    "        if remainder > r or remainder == 0:\n",
+    "            data = max(data, data2) # case of maxRepeat / n does exists and might be less diverse \n",
+    "        elif remainder <= r:\n",
+    "            data = data2 # case of maxRepeat / n does not exist \n",
+    "            \n",
+    "    return data\n",
+    "\n",
+    "TBestSchLD = []\n",
+    "hasDiscrepency = False # For checking against brute force method\n",
+    "for tg in all_tgs:\n",
+    "    tgStuds = [s for s in studentData if s['TG'] == tg]\n",
+    "    # Check if it is correct by comparing it with the bruteforce method\n",
+    "    byBruteforce = FindLeastDiverseInTutorialGroup([\"School\"], sortSchool(tgStuds, n))[0][\"School\"][1]\n",
+    "    byMath = TheoreticalBestForSchool_LD(tgStuds)\n",
+    "    if byBruteforce != byMath:\n",
+    "        sortSch = sortSchool(tgStuds, n)\n",
+    "        for i in sortSch:\n",
+    "            PrintDictListNice(i)\n",
+    "            print()\n",
+    "        print(f\"{byBruteforce} vs {byMath}\", end=\"\\n\\n\")\n",
+    "        hasDiscrepency = True\n",
+    "        \n",
+    "    TBestSchLD.append(byMath)\n",
+    "print(hasDiscrepency)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17996874-1285-4462-bf99-bfda0e15465e",
+   "metadata": {},
+   "source": [
+    "## Calculate gender ratio of every TG group for comparison later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77afb34b-3d98-43d5-831d-ae7b30c49300",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allGenderRatio = []\n",
+    "for tg in all_tgs:\n",
+    "    tgStuds = [s for s in studentData if s['TG'] == tg]\n",
+    "    totalMale = sum(1 for s in tgStuds if s['Gender'])\n",
+    "    allGenderRatio.append(totalMale/len(tgStuds))\n",
+    "print(allGenderRatio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90259b0b-8473-4ba3-8150-71589d6d5800",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Least diverse overall of each factor [score/percentage, [TG(s)], deviation from TG stats]\n",
@@ -1492,18 +1609,67 @@
     "LD_School = [0, [-1], 0]\n",
     "LD_Gender = [0, [-1], 0]\n",
     "# Each loop processes 1 TG\n",
-    "for i in range(len(allTG_LD)):\n",
+    "# note: variable `tg` is -1 of actual Tutorial Group\n",
+    "for tg in range(len(allTG_LD)):\n",
     "    # Print the data nicely\n",
-    "    print(f\"Tutorial group: {i}:\")\n",
-    "    PrintFactorNice((allTG_LD[i], allTG_LD_Idx[i]))\n",
+    "    print(f\"Tutorial group: {tg+1}:\")\n",
+    "    PrintFactorNice((allTG_LD[tg], allTG_LD_Idx[tg]))\n",
     "    print(end=\"\\n\\n\")\n",
     "\n",
-    "    # print(allTG_LD[i])\n",
     "    # Find the least diverse overall, with regards to composition of tutorial group\n",
-    "    # CGPA\n",
-    "    \n",
+    "\n",
     "    # School\n",
-    "    # Gender"
+    "    current_SchoolD = allTG_LD[tg][\"School\"]\n",
+    "    # Calculate difference between TG stats and grp stats\n",
+    "    difference = abs(TBestSchLD[tg] - current_SchoolD[1])\n",
+    "    # Less diverse, so replace\n",
+    "    if difference > LD_School[2] or LD_School[1][0] == -1: # need to init the variable in case first comparison has a delta of 0\n",
+    "        LD_School = [current_SchoolD[1], [tg+1], difference]\n",
+    "    # Same diversity, so add\n",
+    "    elif difference == LD_School[2]:\n",
+    "        LD_School[1].append(tg+1)\n",
+    "        \n",
+    "    # Gender\n",
+    "    current_GenderD = allTG_LD[tg][\"Gender\"]\n",
+    "    # Calculate difference between TG stats and grp stats, have to convert to male%\n",
+    "    maleP = current_GenderD[1] if current_GenderD[0][0][0] else (1 - current_GenderD[1])\n",
+    "    difference = abs(allGenderRatio[tg] - maleP)\n",
+    "    # Less diverse, so replace\n",
+    "    if difference > LD_Gender[2] or LD_Gender[1][0] == -1: # need to init the variable in case first comparison has a delta of 0\n",
+    "        LD_Gender = [current_GenderD[1], [tg+1], difference]\n",
+    "    # Same diversity, so add\n",
+    "    elif difference == LD_Gender[2]:\n",
+    "        LD_Gender[1].append(tg+1)\n",
+    "\n",
+    "    # CGPA\n",
+    "    current_CGPA = allTG_LD[tg][\"CGPA\"]\n",
+    "    # Less diverse, so replace\n",
+    "    if current_CGPA[1] < LD_CGPA[0]:\n",
+    "        LD_CGPA = [current_CGPA[1], [tg+1]]\n",
+    "    # Same diversity, so add\n",
+    "    elif current_CGPA[1] == LD_CGPA[0]:\n",
+    "        LD_CGPA[1].append(tg+1)\n",
+    "        \n",
+    "print(f\"Least diverse overall\")\n",
+    "print(f\"School: Difference of {LD_School[2]*100 :.2f} between theoretical most optimal({TBestSchLD[LD_School[1][0]]*100 :.2f}%) and \\\n",
+    "least school diverse group({LD_School[0]*100 :.2f}%) from tutorial group(s): {LD_School[1]}\")\n",
+    "print(f\"Gender: Difference of {LD_Gender[2] * 100 :.2f} between gender ratio of TG({allGenderRatio[LD_Gender[1][0]-1] * 100 :.2f} % male) and \\\n",
+    "least gender diverse group({LD_Gender[0] * 100 :.2f}% {\"male\" if allTG_LD[LD_Gender[1][0]-1][\"Gender\"][0][0][0] else \"female\"}) from tutorial group(s): {LD_Gender[1]}\")\n",
+    "print(f\"CGPA: Score of {LD_CGPA[0] :.2f} from tutorial group(s): {LD_CGPA[1]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cee8e38f-b6e2-45a3-92fb-d29408121741",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allTG_LD[LD_Gender[1][0]-1][\"Gender\"][0][0][0]\n",
+    "# current_GenderD[1]\n",
+    "# LD_School[1]\n",
+    "# TBestSchLD[LD_School[1][0]]*100\n",
+    "# LD_School[1][0]*100"
    ]
   },
   {
@@ -1535,7 +1701,9 @@
    "id": "4be7c74b-5f79-4f25-b783-43d19a451206",
    "metadata": {},
    "source": [
-    "- Jupyter notebook with git results in tons of merge conflicts stemming from it being a giant JSon, especially with execution_count, output, and when moving around cells. Outputs are also so large that they make it hard to find merge conflicts that matter."
+    "- Jupyter notebook with git results in tons of merge conflicts stemming from it being a giant JSon, especially with execution_count, output, and when moving around cells. Outputs are also so large that they make it hard to find merge conflicts that matter.\n",
+    "- Data types get complicated with the lists in lists in dictionaries, what does `[0][\"School\"][1]` mean for example, not intuitive at a glance\n",
+    "- Finding an objective way to show that it is the most diverse (Pareto fronts, but too difficult to implement)"
    ]
   },
   {
@@ -1545,24 +1713,6 @@
    "source": [
     "# Conclusion"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d30017e2-afbf-4192-ba46-6d54bfe0e7ac",
-   "metadata": {},
-   "source": [
-    "# Debug test things or test cases?\n",
-    "doubt they will give marks for test cases tho, prob just leave this for our own use and remove before submission\n",
-    "Highlight"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6590729b-d91c-4d6a-831b-79a5b9a290e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
